Java8 compat fixed